# career-signal-hh

./: .env.example  .gitignore  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt
config/: apply_templates.yaml  campaigns.yaml  candidate.yaml  llm.yaml  maintenance.yaml  notion_sync.yaml  scoring_rules.yaml  search_presets.yaml  search_profiles.yaml
docs/: CURRENT_STATE_2026-07-08.md  CURRENT_STATE_2026-07-09.md  DESKTOP_UI_PLAN.md  EPIC_A_HANDOFF_2026-07-08.md  EPIC_C_BRIEFING_DECISION_2026-07-08.md  EPIC_D_EVENTED_STORAGE_DECISION_2026-07-08.md  EPIC_E_NOTION_OUTBOX_DECISION_2026-07-08.md  EPIC_F_COCKPIT_DECISION_2026-07-08.md  EPIC_G_OAUTH_V2_DECISION_2026-07-08.md  EPIC_H_CONTROLLED_APPLY_ASSIST_DECISION_2026-07-08.md  EPIC_K_OPERATOR_CONTROL_PLANE_DECISION_2026-07-09.md  EPIC_L_SYNC_MATURITY_DECISION_2026-07-09.md  EPIC_PROMPTS_2026-07-07.md  PHASE2_ROADMAP_2026-07-08.md  PHASE3_ROADMAP_2026-07-09.md  ROADMAP_DECISION_2026-07-07.md  TAIL0_STABILIZATION_2026-07-07.md  career_signal_hh_tz_final_v1_1.md
scripts/: Create-CareerSignalShortcut.ps1  daily_run.ps1  daily_run.sh  smoke_check.ps1  smoke_check.sh  start_app.cmd  start_app.ps1  start_ui.ps1  start_ui.sh
src/: __init__.py  briefing_core.py  campaigns.py  cli.py  cli_builders.py  config.py  data_quality.py  db_migrations.py  exporter_csv.py  exporter_html.py  hh_client.py  hh_oauth.py  hh_sync.py  letter_engine.py  llm_prompts.py  main.py  matching.py  models.py  scoring.py  scoring_v2.py  search_presets.py  search_profiles.py  storage.py  utils.py
tests/: helpers.py  (+42 more)
(+73 files in other folders)
