[project]
name = "career-signal-hh"
version = "0.6.0"
description = "Local MVP for monitoring open vacancies via HeadHunter public API"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
