[project]
name = "career-signal-hh"
version = "0.6.0"
description = "Local MVP for monitoring open vacancies via HeadHunter public API"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "unit: fast tests with no DB or network (deselect with '-m \"not unit\"')",
    "integration: tests that use DB and/or multiple modules",
    "no_network: tests guaranteed to make zero HTTP requests",
    "slow: tests that take longer than a few seconds",
]
